style: Adjust layout and spacing in main page

--- a/index.html
+++ b/index.html
@@ -25,28 +25,29 @@
       style="display:none;visibility:hidden"></iframe></noscript>
 
   <header class="w-full">
-    <div class="mx-auto flex-1 header-body flex space-between items-center">
+    <div class="flex items-center flex-1 mx-auto header-body space-between">
       <a href="/" class="shrink-0" aria-label="판다마켓 홈버튼">
         <img class="logo" src="images/logo/panda-market-logo.png" width="153" height="51" alt="판다마켓 로고"
           aria-hidden="true">
         <img class="mb-logo" src="images/logo/mb_panda-market-logo.png" width="103" height="51" alt=""
           aria-hidden="true">
       </a>
-      <a href="pages/login.html" class="bg-primary btn rounded-lg py-3 px-11">
+      <a href="pages/login.html" class="py-3 rounded-lg bg-primary btn px-11">
         로그인
       </a>
     </div>
   </header>
 
-  <section class="bg-main main-container">
-    <div class="main-content flex justify-center pt-50 tb-pt-21 mb-pt-12">
-      <div class="flex flex-col flex-1">
-        <h1 class="text-4xl mb-text-3xl font-bold gray700 flex">일상의 모든 물건을 <br class="tb-none mb-flex">거래해 보세요</h1>
+  <section class="flex justify-center w-full bg-main">
+    <div class="flex justify-center main-content tb-flex-col pt-50 tb-pt-21 mb-pt-12 tb-gap-53 mb-gap-33">
+      <div class="flex flex-col flex-1 items-center gap-8 tb-gap-6 mb-gap-4.5 mb-px-17">
+        <h1 class="flex text-4xl font-bold mb-text-3xl gray700 mb-text-center">일상의 모든 물건을 <br
+            class="tb-none mb-flex">거래해 보세요</h1>
         <a href="pages/items.html"
-          class="btn w-full bg-primary text-xl mb-text-2lg font-semibold rounded-xl py-3 max-w-89 flex justify-center">구경하러
+          class="flex justify-center w-full py-3 text-xl font-semibold btn bg-primary mb-text-2lg rounded-xl max-w-89">구경하러
           가기</a>
       </div>
-      <div class="flex flex-2 items-end">
+      <div class="flex items-end flex-2">
         <img src="images/home/hero-image.png" width="746" height="340"
           alt="귀여운 팬더 캐릭터가 파란 가방을 메고 도시 배경 앞에 서 있는 일러스트레이션">
       </div>
@@ -54,55 +55,65 @@
   </section>
 
   <section class="container">
-    <ul class="card-list mx-auto">
-      <li class="card bg-base">
-        <div class="card-img">
-          <img src="images/home/feature1-image.png" width="588" height="444"
-            alt="연필꽂이, 책, 하트 모양 안경 아이콘이 있는 파스텔 색상의 앱 인터페이스 일러스트레이션">
-        </div>
-        <div class="card-body font-bold">
-          <div>
-            <span class="text-2lg mb-text-lg primary100">Hot Item</span>
+    <ul class="mx-auto card-list mb-mt-8 mb-mb-15.5">
+      <li class="card py-34.5 tb-p-6 mb-px-4 mb-py-5">
+        <div class="flex gap-16 tb-gap-6 bg-base tb-flex-col">
+          <div class="pl-8 tb-p-0 card-img">
+            <img src="images/home/feature1-image.png" width="588" height="444"
+              alt="연필꽂이, 책, 하트 모양 안경 아이콘이 있는 파스텔 색상의 앱 인터페이스 일러스트레이션">
           </div>
-          <h1 class="pt-3 tb-pt-4 mb-pt-2 text-4xl tb-text-3xl mb-text-2xl gray700">인기 상품을 <br class="tb-none"> 확인해 보세요
-          </h1>
-          <p class="pt-6 mb-pt-4 gray700 text-2xl tb-text-2lg font-medium">가장 HOT한 중고거래 물품을 <br> 판다 마켓에서 확인해 보세요</p>
+          <div class="font-bold card-body">
+            <div>
+              <span class="text-2lg mb-text-lg primary100">Hot Item</span>
+            </div>
+            <h1 class="pt-3 text-4xl tb-pt-4 mb-pt-2 tb-text-3xl mb-text-2xl gray700">인기 상품을 <br class="tb-none"> 확인해
+              보세요
+            </h1>
+            <p class="pt-6 text-2xl font-medium mb-pt-4 gray700 tb-text-2lg">가장 HOT한 중고거래 물품을 <br> 판다 마켓에서 확인해 보세요</p>
+          </div>
         </div>
       </li>
-      <li class="card bg-base">
-        <div class="card-body text-right font-bold">
-          <div>
-            <span class="text-2lg mb-text-lg primary100">Search</span>
+      <li class="card py-34.5 tb-p-6 mb-px-4 mb-py-5">
+        <div class="flex gap-16 tb-gap-6 bg-base tb-flex-col">
+          <div class="font-bold text-right card-body bg-base">
+            <div>
+              <span class="text-2lg mb-text-lg primary100">Search</span>
+            </div>
+            <h1 class="pt-3 text-4xl tb-pt-4 mb-pt-2 tb-text-3xl mb-text-2xl gray700">구매를 원하는 <br class="tb-none">상품을
+              검색하세요</h1>
+            <p class="pt-6 text-2xl font-medium mb-pt-4 gray700 tb-text-2lg">구매하고 싶은 물품은 검색해서<br> 쉽게 찾아보세요</p>
           </div>
-          <h1 class="pt-3 tb-pt-4 mb-pt-2 text-4xl tb-text-3xl mb-text-2xl gray700">구매를 원하는 <br class="tb-none">상품을
-            검색하세요</h1>
-          <p class="pt-6 mb-pt-4 gray700 text-2xl tb-text-2lg font-medium">구매하고 싶은 물품은 검색해서<br> 쉽게 찾아보세요</p>
-        </div>
-        <div class="card-img">
-          <img src="images/home/feature2-image.png" width="588" height="444"
-            alt="파일 아이콘들 사이에 있는 돋보기 아이콘을 보여주는 검색 기능 일러스트레이션">
+          <div class="card-img">
+            <img src="images/home/feature2-image.png" width="588" height="444"
+              alt="파일 아이콘들 사이에 있는 돋보기 아이콘을 보여주는 검색 기능 일러스트레이션">
+          </div>
         </div>
       </li>
-      <li class="card bg-base">
-        <div class="card-img">
-          <img src="./images/home/feature3-image.png" width="588" height="444"
-            alt="귀여운 팬더 얼굴이 그려진 녹색 티셔츠와 그 위에 떠 있는 분홍색 하트들">
-        </div>
-        <div class="card-body font-bold">
-          <div>
-            <span class="text-2lg mb-text-lg primary100">Register</span>
+      <li class="card py-34.5 bg-base mb-34.5 tb-mb-8 tb-p-6 mb-px-4 mb-py-5 ">
+        <div class="flex gap-16 tb-gap-6 bg-base tb-flex-col">
+          <div class="card-img">
+            <img src="./images/home/feature3-image.png" width="588" height="444"
+              alt="귀여운 팬더 얼굴이 그려진 녹색 티셔츠와 그 위에 떠 있는 분홍색 하트들">
           </div>
-          <h1 class="pt-3 tb-pt-4 mb-pt-2 text-4xl tb-text-3xl mb-text-2xl gray700">판매를 원하는 상품을 등록하세요</h1>
-          <p class="pt-6 mb-pt-4 gray700 text-2xl tb-text-2lg font-medium">어떤 물건이든 판매하고 싶은 상품을<br> 쉽게 등록하세요</p>
+          <div class="font-bold card-body bg-base">
+            <div>
+              <span class="text-2lg mb-text-lg primary100">Register</span>
+            </div>
+            <h1 class="pt-3 text-4xl tb-pt-4 mb-pt-2 tb-text-3xl mb-text-2xl gray700">판매를 원하는 상품을 등록하세요</h1>
+            <p class="pt-6 text-2xl font-medium mb-pt-4 gray700 tb-text-2lg">어떤 물건이든 판매하고 싶은 상품을<br> 쉽게 등록하세요</p>
+          </div>
         </div>
       </li>
     </ul>
   </section>
 
-  <section class="bg-main container">
-    <div class="content flex justify-center">
+  <section class="bg-main pt-35.5 tb-p-0">
+    <div class="flex justify-center tb-flex-col ">
       <div class="my-auto">
-        <h1 class="text-4xl mb-text-3xl font-bold gray700">믿을 수 있는 <br> 판다마켓 중고 거래</h1>
+        <h1 class="text-4xl font-bold mb-text-3xl gray700 tb-text-center tb-py-52 mb-py-31">믿을 수 있는 <br> 판다마켓
+          중고
+          거래
+        </h1>
       </div>
       <div class="flex items-end">
         <img src="images/home/bottom-banner-image.png" alt="대화 중인 두 팬더 캐릭터와 그 사이의 대화 말풍선에 별점 5개가 표시된 일러스트레이션"
@@ -112,7 +123,7 @@
   </section>
 
   <footer class="bg-footer">
-    <ul class="flex space-between items-center">
+    <ul class="flex items-center space-between">
       <li class="gray400" id="copyright-year"></li>
       <li class="gray200 flex gap-7.5">
         <a href="pages/privacy.html">Privacy Policy</a>
