style: Adjust layout and spacing in sign-in, sign-up page

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
 
-  <header class="w-full">
-    <div class="flex items-center flex-1 mx-auto header-body space-between">
-      <a href="/" class="shrink-0" aria-label="판다마켓 홈버튼">
-        <img class="logo" src="images/logo/panda-market-logo.png" width="153" height="51" alt="판다마켓 로고"
+  <header class="sticky top-0 w-full flex justify-center bg-white border-b ">
+    <div class="flex items-center flex-1 space-between px-50 py-2.5 max-w-pc tb-px-6 mb-px-4">
+      <a href="/" class="shrink-0" aria-label="홈버튼">
+        <img class="logo mb-none" src="images/logo/panda-market-logo.png" width="153" height="51" alt="판다마켓 로고"
           aria-hidden="true">
-        <img class="mb-logo" src="images/logo/mb_panda-market-logo.png" width="103" height="51" alt=""
+        <img class="mb-logo pc-none mb-block" src="images/logo/mb_panda-market-logo.png" width="103" height="51" alt=""
           aria-hidden="true">
       </a>
       <a href="pages/login.html" class="py-3 rounded-lg bg-primary btn px-11">
