--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -16,7 +16,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/login.css">
+  <link rel="stylesheet" href="../styles/sign-in.css">
   <script src="../CONSTANS.js"></script>
   <title></title>
 </head>
@@ -29,7 +29,7 @@
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
   <main class="min-h-screen">
-    <article class="login-container grid justify-center gap-10  mb-gap-6 pt-15 tb-pt-12 mb-pt-6 px-13 mb-px-4">
+    <article class="login-container grid justify-center gap-10 mb-gap-6 py-15 tb-pt-12 mb-pt-6 px-13 mb-px-4">
       <section class="flex justify-center">
         <a href="/" aria-label="홈으로">
           <img class="flex justify-center mb-w-49.5 mx-auto" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고"
@@ -48,11 +48,12 @@
               <input type="password" autocomplete="current-password" id="password" name="password"
                 placeholder="비밀번호를 입력해주세요">
             </div>
-            <button type="submit" class="flex btn btn-block bg-gray400 text-xl font-semibold">로그인</button>
+            <button type="submit"
+              class="flex btn btn-block bg-gray400 text-xl font-semibold rounded-xl py-4">로그인</button>
           </form>
         </div>
 
-        <div class="flex space-between items-center bg-main rounded-lg py-4 px-6">
+        <div class="flex space-between items-center bg-label rounded-lg py-4 px-6">
           <p class="text-lg gray800 font-medium">간편 로그인하기</p>
           <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인">
