--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -26,8 +26,8 @@
       style="display:none;visibility:hidden"></iframe>
   </noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <main class="min-h-screen ">
-    <article class="sign-up-container grid gap-10 mb-gap-6 justify-center pt-15 tb-pt-12 mb-pt-6  px-13 mb-px-4">
+  <main class="min-h-screen">
+    <article class="sign-up-container grid gap-10 mb-gap-6 justify-center py-15 tb-pt-12 mb-pt-6  px-13 mb-px-4">
       <section class="flex justify-center">
         <a href="/" aria-label="홈으로">
           <img class="flex justify-center mb-w-49.5 mx-auto" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고"
@@ -55,11 +55,12 @@
               <input type="password" id="check-password" name="check-password" placeholder="비밀번호를 다시 한 번 입력해주세요"
                 autocomplete="new-password">
             </div>
-            <button type="submit" class="flex btn btn-block bg-gray400 text-xl mb-text-lg font-semibold">회원가입</button>
+            <button type="submit"
+              class="btn text-center w-full bg-gray400 text-xl mb-text-lg font-semibold rounded-xl py-4">회원가입</button>
           </form>
         </div>
 
-        <div class="flex space-between items-center bg-main rounded-lg py-4 px-6">
+        <div class="flex space-between items-center bg-label rounded-lg py-4 px-6">
           <p class="text-lg gray800 font-medium ">간편 로그인하기</p>
           <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인">
