--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -74,7 +74,7 @@
 
         <div class="flex justify-center">
           <p class="font-medium" style="font-size: 15px;">이미 회원이신가요?
-            <a class="primary100 underline" href="/pages/login.html">로그인</a>
+            <a class="primary100 underline" href="/pages/sign-in.html">로그인</a>
           </p>
         </div>
       </section>
