style: Adjust layout and spacing in header, footer

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 </head>
 
 <body>
-
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
 
-  <header class="sticky top-0 w-full flex justify-center bg-white border-b ">
-    <div class="flex items-center flex-1 space-between px-50 py-2.5 max-w-pc tb-px-6 mb-px-4">
+  <header class="sticky top-0 w-full flex justify-center bg-white border-b">
+    <div class="flex items-center flex-1 space-between pc-px-50 py-2.5 max-w-pc px-6 mb-px-4">
       <a href="/" class="shrink-0" aria-label="홈버튼">
         <img class="logo mb-none" src="images/logo/panda-market-logo.png" width="153" height="51" alt="판다마켓 로고"
           aria-hidden="true">
@@ -38,10 +37,10 @@
     </div>
   </header>
 
-  <section class="flex justify-center w-full bg-main">
+  <section class="flex justify-center w-full bg-main px-4">
     <div class="flex justify-center main-content tb-flex-col pt-50 tb-pt-21 mb-pt-12 tb-gap-53 mb-gap-33">
-      <div class="flex flex-col flex-1 items-center gap-8 tb-gap-6 mb-gap-4.5 mb-px-17">
-        <h1 class="flex text-4xl font-bold mb-text-3xl gray700 mb-text-center">일상의 모든 물건을 <br
+      <div class="p-4 flex flex-col flex-1 items-center gap-8 tb-gap-6 mb-gap-4.5 mb-px-17">
+        <h1 class="flex text-4xl font-bold mb-text-3xl gray700 tb-text-center">일상의 모든 물건을 <br
             class="tb-none mb-flex">거래해 보세요</h1>
         <a href="pages/items.html"
           class="flex justify-center w-full py-3 text-xl font-semibold btn bg-primary mb-text-2lg rounded-xl max-w-89">구경하러
@@ -54,8 +53,8 @@
     </div>
   </section>
 
-  <section class="container">
-    <ul class="mx-auto card-list mb-mt-8 mb-mb-15.5">
+  <section>
+    <ul class="mx-auto card-list mb-mt-8 mb-mb-15.5 px-4">
       <li class="card py-34.5 tb-p-6 mb-px-4 mb-py-5">
         <div class="flex gap-16 tb-gap-6 bg-base tb-flex-col">
           <div class="pl-8 tb-p-0 card-img">
@@ -107,7 +106,7 @@
     </ul>
   </section>
 
-  <section class="bg-main pt-35.5 tb-p-0">
+  <section class="bg-main pt-35.5 tb-p-0 px-4">
     <div class="flex justify-center tb-flex-col ">
       <div class="my-auto">
         <h1 class="text-4xl font-bold mb-text-3xl gray700 tb-text-center tb-py-52 mb-py-31">믿을 수 있는 <br> 판다마켓
@@ -122,9 +121,9 @@
     </div>
   </section>
 
-  <footer class="bg-footer">
-    <ul class="flex items-center space-between">
-      <li class="gray400" id="copyright-year"></li>
+  <footer class="bg-footer min-h-40 w-full flex justify-cente items-start">
+    <ul class="flex space-between max-w-pc flex-wrap pc-px-50 px-6 pt-8 flex-1 items-start gap-y-6">
+      <li class="gray400 mb-order-last" id="copyright-year"></li>
       <li class="gray200 flex gap-7.5">
         <a href="pages/privacy.html">Privacy Policy</a>
         <a href="pages/faq.html">FAQ</a>
