--- a/pages/faq.html
+++ b/pages/faq.html
@@ -23,7 +23,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WR6VK2S3" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <h1>FNQ</h1>
+  <h1>FAQ</h1>
 </body>
 
 </html>
