로그인 버튼 div태그 제거

--- a/mission2/index.html
+++ b/mission2/index.html
@@ -18,9 +18,9 @@
           />
         </a>
       </div>
-      <div class="login-btn">
-        <a href="/login.html" class="btn-font">로그인</a>
-      </div>
+      
+      <a href="/login.html" class="btn-font login-btn">로그인</a>
+      
     </header>
 
     <main>
