스프린트미션 1+2

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
   <body>
     <form class="login">
       <div class="logo">
-        <a href="index0910.html">
+        <a href="index.html">
           <img class="logo-image" src="logo-3.png" art="판다마켓"
         /></a>
       </div>
