--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <div>
-        <a href="/index0910.html">
+        <a href="/index.html">
           <img src="panda.png" alt="판다마켓 로고" />
         </a>
       </div>
