--- a/sinup.html
+++ b/sinup.html
@@ -30,7 +30,7 @@
   <body>
     <form class="login">
       <div class="logo">
-        <a href="index0910.html">
+        <a href="index.html">
           <img class="login-title" src="logo-3.png" art="판다마켓"
         /></a>
       </div>
