--- a/mission2/login.html
+++ b/mission2/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>로그인</title>
-  <link rel="stylesheet" href="s2.css">
+  <link rel="stylesheet" href="user.css">
 </head>
 <body>
   <section id="sec_login">
