--- a/login/index.html
+++ b/login/index.html
@@ -33,14 +33,20 @@
         <a href="/"><img src="../assets/images/common/logo.png" /></a>
       </header>
       <form>
-        <label for="email">이메일</label>
-        <input id="email" type="email" placeholder="이메일을 입력해주세요" />
-        <label for="password">비밀번호</label>
-        <div class="password-input">
-          <input id="password" type="password" placeholder="비밀번호를 입력해주세요" />
-          <i class="eye-icon fa-regular fa-eye-slash"></i>
-        </div>
-        <button type="submit">로그인</button>
+        <section>
+          <label for="email">이메일</label>
+          <input id="email" type="email" placeholder="이메일을 입력해주세요" />
+          <p id="invalid-email-message" class="message"></p>
+        </section>
+        <section>
+          <label for="password">비밀번호</label>
+          <div class="password-input">
+            <input id="password" type="password" placeholder="비밀번호를 입력해주세요" />
+            <i class="eye-icon fa-regular fa-eye-slash"></i>
+          </div>
+          <p id="invalid-password-message" class="message"></p>
+        </section>
+        <button type="submit" disabled>로그인</button>
       </form>
       <div class="social-login">
         <span>간편 로그인하기</span>
