feat: 로그인 페이지 input창 유효성 검사 기능 구현

--- a/login/index.html
+++ b/login/index.html
@@ -61,5 +61,6 @@
       </div>
       <p class="sign-up">판다마켓이 처음이신가요? <a href="../signup/index.html">회원가입</a></p>
     </main>
+    <script type="module" src="../assets/scripts/login.js"></script>
   </body>
 </html>
