feat: 회원가입 페이지 유효성 검사 기능 구현

--- a/signup/index.html
+++ b/signup/index.html
@@ -64,5 +64,6 @@
       </div>
       <p class="login">이미 회원이신가요? <a href="../login/index.html">로그인</a></ㅔ>
     </main>
+    <script type="module" src="../assets/scripts/signup.js"></script>
   </body>
 </html>
