refactor: 파일 구조 개선 및 css :root 를 common.css로 중복 코드 개선

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>판다 마켓</title>
     <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" href="images/logo/favicon.ico" />
+    <link rel="icon" href="assets/images/logo/favicon.ico" />
   </head>
   <body>
     <!-- 네비게이션 바 -->
@@ -29,14 +30,14 @@
         <div>
           <a href="/">
             <img
-              src="images/logo/panda-market-logo.png"
+              src="assets/images/logo/panda-market-logo.png"
               alt="판다마켓 로고 아이콘"
               height="51px"
             />
           </a>
           <button
             aria-label="로그인 버튼"
-            onclick="window.location.href='/login-page/login.html'"
+            onclick="window.location.href='/pages/auth/login/login.html'"
           >
             로그인
           </button>
@@ -60,7 +61,7 @@
         </div>
         <div class="banner-image">
           <img
-            src="images/home/hero-image.png"
+            src="assets/images/home/hero-image.png"
             alt="일상의 모든 물건을 거래해 보세요 배너 이미지"
           />
         </div>
@@ -70,7 +71,10 @@
     <main>
       <section class="hot-item item">
         <div class="item-container">
-          <img src="images/home/feature1-image.png" alt="인기 상품 이미지" />
+          <img
+            src="assets/images/home/feature1-image.png"
+            alt="인기 상품 이미지"
+          />
           <div class="item-content">
             <strong class="strong">Hot item</strong>
             <h2 class="item-title">
@@ -89,7 +93,7 @@
       <section class="search item">
         <div class="item-container">
           <img
-            src="images/home/feature2-image.png"
+            src="assets/images/home/feature2-image.png"
             alt="인기 상품 이미지"
             width="588px"
             height="444px"
@@ -112,7 +116,7 @@
       <section class="register item">
         <div class="item-container">
           <img
-            src="images/home/feature3-image.png"
+            src="assets/images/home/feature3-image.png"
             alt="인기 상품 이미지"
             width="588px"
             height="444px"
@@ -145,7 +149,7 @@
         </div>
         <div class="banner-image">
           <img
-            src="images/home/bottom-banner-image.png"
+            src="assets/images/home/bottom-banner-image.png"
             alt="믿을 수 있는 판다마켓 중고 거래 배너 이미지"
           />
         </div>
@@ -166,28 +170,40 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/social/facebook-logo.svg" alt="facebook-logo" />
+            <img
+              src="assets/images/social/facebook-logo.svg"
+              alt="facebook-logo"
+            />
           </a>
           <a
             href="https://twitter.com"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/social/twitter-logo.svg" alt="twitter-logo" />
+            <img
+              src="assets/images/social/twitter-logo.svg"
+              alt="twitter-logo"
+            />
           </a>
           <a
             href="https://www.youtube.com"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/social/youtube-logo.svg" alt="youtube-logo" />
+            <img
+              src="assets/images/social/youtube-logo.svg"
+              alt="youtube-logo"
+            />
           </a>
           <a
             href="https://www.instagram.com"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/social/instagram-logo.svg" alt="instagram-logo" />
+            <img
+              src="assets/images/social/instagram-logo.svg"
+              alt="instagram-logo"
+            />
           </a>
         </div>
       </div>
