--- a/pages/auth/signup/signup.html
+++ b/pages/auth/signup/signup.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
-    <link rel="icon" href="../images/logo/favicon.ico" />
-    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="icon" href="../../../assets/images/logo/favicon.ico" />
+    <link rel="stylesheet" href="../../../styles/reset.css" />
+    <link rel="stylesheet" href="../../../styles/common.css" />
     <link rel="stylesheet" href="signup.css" />
   </head>
   <body>
@@ -15,7 +16,7 @@
         <a href="/index.html">
           <img
             class="login-logo-img"
-            src="../images/logo/panda-market-logo.svg"
+            src="../../../assets/images/logo/panda-market-logo.svg"
             alt="판다마켓 로고 아이콘"
           />
         </a>
@@ -50,7 +51,7 @@
               placeholder="비밀번호를 입력해주세요"
             />
             <img
-              src="../images/login/btn_visibility_off_24px.svg"
+              src="../../../assets/images/auth/btn_visibility_off_24px.svg"
               alt="btn_visibility_off"
             />
           </div>
@@ -65,7 +66,7 @@
               placeholder="비밀번호를 다시 한 번 입력해주세요"
             />
             <img
-              src="../images/login/btn_visibility_off_24px.svg"
+              src="../../../assets/images/auth/btn_visibility_off_24px.svg"
               alt="btn_visibility_off"
             />
           </div>
@@ -77,17 +78,23 @@
         <p>간편 로그인하기</p>
         <div>
           <a href="https://www.google.com/">
-            <img src="../images/login/google.png" alt="구글 SNS 로그인" />
+            <img
+              src="../../../assets/images/auth/google.png"
+              alt="구글 SNS 로그인"
+            />
           </a>
           <a href="https://www.kakaocorp.com/page/">
-            <img src="../images/login/kakao.png" alt="카카오 SNS 로그인" />
+            <img
+              src="../../../assets/images/auth/kakao.png"
+              alt="카카오 SNS 로그인"
+            />
           </a>
         </div>
       </div>
       <!-- 로그인 -->
       <div class="signup-container">
         <p>이미 회원이신가요?</p>
-        <a href="../login-page/login.html">로그인</a>
+        <a href="../login/login.html">로그인</a>
       </div>
     </main>
   </body>
