feat: abort controller를 사용하여 window unload 이벤트 발생시 등록했던 event handler 제거
(cherry picked from commit 73c62e379d40861727239c04fb09dadc324978f5)

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -76,19 +76,22 @@
     </article>
   </main>
   <script>
+    const controller = new AbortController();
+    const signal = controller.signal;
+
     window.addEventListener('load', () => {
       const userEmail = document.getElementById('email');
       const userPassword = document.getElementById('password');
       const submitBtn = document.querySelector('button[type="button"]');
 
       submitBtn.onclick = () => {
-        if (userEmail.validity.valid && userPassword.validity.valid) {
+        const inputs = document.querySelectorAll('input');
+        if ([...inputs].every(el => el.validity.valid)) {
           document.location.pathname = '/pages/items.html';
         }
       }
 
       userEmail.addEventListener('blur', () => {
-
         const errMsg = userEmail.nextElementSibling;
         if (userEmail.validity.valid === false) {
           submitBtn.classList.replace('bg-primary', 'bg-gray400');
@@ -99,7 +102,7 @@
             submitBtn.classList.replace('bg-gray400', 'bg-primary');
           }
         }
-      });
+      }, { signal: signal });
 
       userPassword.addEventListener('blur', () => {
         const errMsg = userPassword.nextElementSibling;
@@ -116,8 +119,13 @@
             submitBtn.classList.replace('bg-gray400', 'bg-primary');
           }
         }
-      })
+      }, { signal: signal })
     });
+
+    window.addEventListener('unload', () => {
+      controller.abort();
+    });
+
   </script>
 </body>
 
