--- a/signup/index.html
+++ b/signup/index.html
@@ -21,6 +21,13 @@
   </head>
   <body>
     <main>
+      <div id="modal-container">
+        <div id="modal-background"></div>
+        <div id="modal">
+          <p id="error-message">거짓</p>
+          <button id="modal-close-button">확인</button>
+        </div>
+      </div>
       <header>
         <a href="/"><img src="../assets/images/common/logo.png" /></a>
       </header>
@@ -51,7 +58,7 @@
         </div>
         <p id="invalid-password-confirm-message" class="message"></p>
       </section>
-        <button type="submit" disabled>회원가입</button>
+        <button id="submit-button" type="submit" disabled>회원가입</button>
       </form>
       <div class="social-login">
         <span>간편 로그인하기</span>
