style: 반응형 디자인 구현

--- a/signup/index.html
+++ b/signup/index.html
@@ -24,7 +24,7 @@
       <div id="modal-container">
         <div id="modal-background"></div>
         <div id="modal">
-          <p id="error-message">거짓</p>
+          <p id="error-message"></p>
           <button id="modal-close-button">확인</button>
         </div>
       </div>
