style: 랜딩페이지 반응형 스타일 작성

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
             <div class="main-page-text align-left first">
               <span class="sub-title">Hot item</span>
               <h1 class="main-title first">인기 상품을 확인해 보세요</h1>
-              <p class="description align-left">
+              <p class="description first">
                 가장 HOT한 중고거래 물품을 판다 마켓에서 확인해 보세요
               </p>
             </div>
           </div>
         </div>
         <div class="main-page">
-          <div class="main-content-container">
+          <div class="main-content-container align-right">
             <div class="main-page-text align-right second">
               <span class="sub-title">Search</span>
               <h1 class="main-title">구매를 원하는 상품을 검색하세요</h1>
-              <p class="description align-left">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
+              <p class="description second">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
             </div>
             <img
               class="main-page-image"
@@ -89,9 +89,7 @@
             <div class="main-page-text align-left third">
               <span class="sub-title">Register</span>
               <h1 class="main-title third">판매를 원하는 상품을 등록하세요</h1>
-              <p class="description align-left">
-                어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요
-              </p>
+              <p class="description third">어떤 물건이든 판매하고 싶은 상품을 쉽게 등록하세요</p>
             </div>
           </div>
         </div>
