chore: 공유 시 미리보기를 설정할 메타 태그 작성

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="판다마켓" />
+    <meta property="og:description" content="일상에서 모든 물건을 거래해보세요" />
+    <meta
+      property="og:image"
+      content="https://adorable-phoenix-7e2244.netlify.app/assets/images/common/logo.png"
+    />
+    <meta property="og:url" content="https://adorable-phoenix-7e2244.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="판다마켓" />
+    <meta name="twitter:description" content="일상에서 모든 물건을 거래해보세요" />
+    <meta
+      name="twitter:image"
+      content="https://adorable-phoenix-7e2244.netlify.app/assets/images/common/logo.png"
+    />
     <title>Panda Market</title>
     <link rel="stylesheet" href="./assets/styles/reset.css" />
     <link rel="stylesheet" href="./assets/styles/home.css" />
