style: 랜딩페이지 스타일 변경

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="main-content-container align-right">
             <div class="main-page-text align-right second">
               <span class="sub-title">Search</span>
-              <h1 class="main-title">구매를 원하는 상품을 검색하세요</h1>
+              <h1 class="main-title second">구매를 원하는 상품을 검색하세요</h1>
               <p class="description second">구매하고 싶은 물품은 검색해서 쉽게 찾아보세요</p>
             </div>
             <img
