style: 랜딩페이지 태그 및 스타일 변경

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </head>
   <body>
     <main>
-      <header>
-        <div class="header-container">
+      <nav>
+        <div class="nav-container">
           <img
             class="logo"
             width="151"
@@ -51,7 +51,7 @@
           />
           <a class="login-button" href="./login/index.html">로그인</a>
         </div>
-      </header>
+      </nav>
       <section class="banner">
         <div class="banner-content">
           <div class="banner-text-container">
